# pskursor

./: Cargo.toml  DEV_DOC.md  LICENSE  README.md
.github/workflows/: rust-checks.yml
src/: device.rs  error.rs  lib.rs  main.rs
src/daemon/: mod.rs
src/tui/: mod.rs
src/tui/screens/: control.rs  device_management.rs  device_stats.rs  mod.rs
