[package]
name = "pskursor"
description = "Open-source device driver for PlayStation 5 Dual Sense Controller for Linux"
authors = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
evdev = "0.13.2"
features = "0.10.0"
hidapi = "2.6.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
