[package]
name = "pskursor"
description = "Open-source device driver for PlayStation 5 Dual Sense Controller for Linux"
authors = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
evdev = "0.13.2"
hidapi = "2.6.6"
ratatui = { version = "0.30.2", default-features = false, features = ["termion"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
termion = "4.0.6"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
udev = "0.9.3"
