[package]
name = "pskursor"
description = "Open-source device driver for PlayStation 5 Dual Sense Controller for Linux"
authors = ["Syed Vilayat Ali Rizvi <vilayatcodemysite@gmail.com>"]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
evdev = { version = "0.13.2", features = ["tokio"] }
ratatui = { version = "0.30.2", default-features = false, features = ["termion"] }
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
termion = "4.0.6"
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
udev = "0.9.3"
